This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: lack of right parentheses
Type: compile error Stage: resolved
Components: Cross-Build Versions: Python 3.7, Python 3.6, Python 3.5
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: Alex.Willmer, bh_binghu, serhiy.storchaka
Priority: normal Keywords:

Created on 2017-06-13 09:42 by bh_binghu, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
posixmodule_compiler_error.png bh_binghu, 2017-06-13 09:42 compiler error
Pull Requests
URL Status Linked Edit
PR 2154 merged bh_binghu, 2017-06-13 09:42
PR 2215 merged serhiy.storchaka, 2017-06-15 13:28
PR 2216 merged serhiy.storchaka, 2017-06-15 13:29
Messages (5)
msg295883 - (view) Author: Messi Liao (bh_binghu) * Date: 2017-06-13 09:42
lack of right parentheses
msg295920 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2017-06-13 14:30
New changeset 0d322181d9018b25a5c28e62a0c193b4309aaa95 by Serhiy Storchaka (messi Liao) in branch 'master':
bpo-30650: Fixed a syntax error: missed right parentheses (#2154)
https://github.com/python/cpython/commit/0d322181d9018b25a5c28e62a0c193b4309aaa95
msg295921 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2017-06-13 14:33
Thank you for your patch Messi Liao! Do you mind to backport it to branches 3.6 and 3.5?
msg296091 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2017-06-15 13:57
New changeset f75f6edb1fdbaeb12f9de368ebdeb1b7d1836433 by Serhiy Storchaka in branch '3.6':
[3.6] bpo-30650: Fixed a syntax error: missed right parentheses (GH-2154) (#2215)
https://github.com/python/cpython/commit/f75f6edb1fdbaeb12f9de368ebdeb1b7d1836433
msg296092 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2017-06-15 13:58
New changeset b39c78a73c203dcaf8f2061da81827c667440402 by Serhiy Storchaka in branch '3.5':
[3.5] bpo-30650: Fixed a syntax error: missed right parentheses (GH-2154) (#2216)
https://github.com/python/cpython/commit/b39c78a73c203dcaf8f2061da81827c667440402
History
Date User Action Args
2022-04-11 14:58:47adminsetgithub: 74835
2017-06-15 14:18:00serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: backport needed -> resolved
2017-06-15 13:58:17serhiy.storchakasetmessages: + msg296092
2017-06-15 13:57:55serhiy.storchakasetmessages: + msg296091
2017-06-15 13:29:40serhiy.storchakasetpull_requests: + pull_request2260
2017-06-15 13:28:06serhiy.storchakasetpull_requests: + pull_request2259
2017-06-13 14:33:03serhiy.storchakasetstage: backport needed
messages: + msg295921
versions: + Python 3.5, Python 3.6
2017-06-13 14:30:46serhiy.storchakasetnosy: + serhiy.storchaka
messages: + msg295920
2017-06-13 09:42:38bh_binghucreate