bpo-30650: Fixed a syntax error: missed right parentheses (#2154)